force-app/main/default/objects/FieloEE__RewardTag__c/FieloEE__RewardTag__c.object-meta.xml
<CustomObject>
    <description>Set of tags of a reward.</description>
    <label>Reward Tag</label>
    <nameField>
        <label>Prize_PrizeTag Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reward Tag</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>