force-app/main/default/objects/FieloEE__RewardTag__c/fields/FieloEE__Reward__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Reward__c</fullName>
    <label>Reward</label>
    <referenceTo>FieloEE__Reward__c</referenceTo>
    <relationshipLabel>Rewards Tags</relationshipLabel>
    <relationshipName>RewardTag</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>