force-app/main/default/objects/FieloEE__RewardTag__c/fields/FieloEE__Tag__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Tag__c</fullName>
    <label>Tag</label>
    <referenceTo>FieloEE__Tag__c</referenceTo>
    <relationshipLabel>Rewards Tags</relationshipLabel>
    <relationshipName>RewardTag</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>